yoshimi 1.5.4 M

2017-11-30 Will
* BugFix: long standing silent legato note :)
  This is an interim solution needs improving.
* Further improvments to legato mode.
  Another old bug found (not fixed yet) :(
* Bugfix: Drum mode not clearing legato.

2017-11-29 Will
* BugFix: Channel switch not loading correctly.
* Added specific older X86 CMake build options.

2017-11-28 Will
* GUI legato mode turns red if drum mode.
* Master reset reloads the saved default state
  if it exists and is set in config.

2017-11-26 will
* Refined legato/keymode code.
* Part code cleanups.
* Minor optimisation for mono/legato renote.
* Removed redundant code from part NoteOn
  and VirKeyboardUI.

2017-11-25 Will
* Improved protection for channel switch.
* Implimented CC 68 - Legato pedal.
* BugFix: CC 68 brace in wrong place :(

2017-11-24 Will
* Channel switcher was activated by Ardour!
  Temporary fix in place.

2017-11-23 Will
* Improved internal message system.
  Now possible to send plain non-blocking
  messages, such as warnings, to CLI & GUI.
* Updated docs.
* Fixed regression. Mixer not updating :(

2017-11-22 Will
* Further refinements to history lists.
  Instruments now included.
* CLI instrument load can use '@' history.

2017-11-20 Will
* Improved GUI & CLI instrument saving.
* Updated docs.
* BugFix: Failed right click on bank window.

2017-11-20 Will
* Small improvement to history lists.
  Ready to include instruments.

2017-11-19 Will
* Simplified history lists.
  Last used is now always top of its list.
* All main file loads/saves offer last used.

2017-11-18 Will
* Note on/off swap now in MusicIO.
* Resolved channel switch Gui issues.
* Consolidated SetSystemValues as NRPN only.
  Still not completely thread safe.
* Updated docs.
* More refinements to CLI.
* Tidied up some MIDI-learn messages.

2017-11-17 Will
* Added error reports to several I/O ring buffers.
* Revised channel switcher.
  Still some GUI anomalies to sort out :(

2017-11-16 Will