@@ -1,4 +1,7 @@
-yoshimi 1.5.4 M
+yoshimi 1.5.4 - experimental
+
+2017-12-1 Will
+* UDP server implimented.
 
 2017-11-30 Will
 * BugFix: long standing silent legato note :)
